<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="currentArticle"
            type="com.demo.dailynews.data.model.Article" />
        <import type="com.demo.dailynews.common.UtilitiesKt"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/news_description_root">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five_dp"
            tools:context=".ui.news.view.ArticleDescription">

            <TextView
                android:id="@+id/title_textView"
                style="@style/headline_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:text="@{currentArticle.newsHeadline}"
                android:textSize="@dimen/des_large_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCardview"
                style="@style/image_cardview_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textView">
                <ImageView
                    android:id="@+id/news_ImageView"
                    loadImageUrl="@{currentArticle.newsImageUrl}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/article"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/description_TextView"
                style="@style/description_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@{currentArticle.newsDescription}"
                android:textSize="@dimen/des_medium_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageCardview" />

            <TextView
                android:id="@+id/date_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:gravity="end"
                android:text="@{UtilitiesKt.updateDateTime(currentArticle.newsDateTime)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_TextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>