<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/shareNewsURL"
        android:title="@string/share_url"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_share"/>
</menu>