<resources>
    <string name="app_name">DailyNews</string>
    <string name="fetch_failed_message">Failed to fetch the articles ...</string>
    <string name="no_news_found">No articles found ....</string>
    <string name="article">Article</string>
    <string name="share_url">Share Url</string>
    <string name="internet_error">Please check the your device connection. Seems there is some problem!!</string>
</resources>